[tool.poetry]
name = "pytermgraph"
version = "0.1.0"
description = ""
authors = ["Kha Dinh <dalo2903@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygraphviz = "^1.13"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
